--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/fernandobarrosd/custom-html-select.git",
   "author": "Fernando de Barros <fdebarros0910-2004@hotmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start:dev": "vite",
     "start": "vite preview",
